[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naver-blog-collector"
version = "0.1.0"
description = "네이버 블로그 수집기 - 검색 API + Playwright 본문 추출"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "배움의 달인", email = "learn@example.com" }]
keywords = ["naver", "blog", "crawler", "playwright", "scraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
    "lxml-html-clean>=0.4.0",
    "openpyxl>=3.1.0",
    "konlpy>=0.6.0",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "wordcloud",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
nblog = "nblog.cli:main"
blog = "nblog.cli:main"

[project.urls]
Homepage = "https://github.com/daniel8824/naver-blog-collector"
Repository = "https://github.com/daniel8824/naver-blog-collector"

[tool.hatch.build.targets.wheel]
packages = ["src/nblog"]

[tool.hatch.build.targets.sdist]
include = ["src/nblog"]
